# dbt-gen

./: README.md  dbt_gen.py  pyproject.toml
